load_dotenv upon import, remove redundant load_dotenvs; lazy default client: import timedb as td; td.create(); validate df column naming

--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -20,13 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import timedb as tb\n",
     "import pandas as pd\n",
-    "from datetime import datetime, timezone, timedelta\n",
-    "from dotenv import load_dotenv\n",
-    "from timedb import TimeDataClient\n",
-    "load_dotenv()\n",
-    "\n",
-    "td = TimeDataClient()"
+    "from datetime import datetime, timezone, timedelta"
    ]
   },
   {
@@ -54,8 +50,8 @@
     }
    ],
    "source": [
-    "td.delete()\n",
-    "td.create()\n",
+    "tb.delete()\n",
+    "tb.create()\n",
     "\n",
     "series_configs = [\n",
     "    {'name': 'wind_power', 'unit': 'MW', 'labels': {'turbine': 'T01', 'site': 'Gotland', 'type': 'onshore'}},\n",
@@ -67,7 +63,7 @@
     "]\n",
     "\n",
     "for config in series_configs:\n",
-    "    td.create_series(**config)\n",
+    "    tb.create_series(**config)\n",
     "\n",
     "print(f\"Created {len(series_configs)} series\")"
    ]
@@ -101,7 +97,7 @@
     "dates = [base_time + timedelta(hours=i) for i in range(24)]\n",
     "\n",
     "# Insert data for each Gotland turbine\n",
-    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = tb.series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
     "    df = pd.DataFrame({\n",
@@ -141,7 +137,7 @@
    ],
    "source": [
     "# list_series() returns full metadata for each matching series\n",
-    "all_wind = td.series(\"wind_power\")\n",
+    "all_wind = tb.series(\"wind_power\")\n",
     "print(f\"All wind power series ({all_wind.count()}):\\n\")\n",
     "\n",
     "for s in all_wind.list_series():\n",
@@ -164,7 +160,7 @@
    ],
    "source": [
     "# list_labels() returns unique values for a single label dimension\n",
-    "wind = td.series(\"wind_power\")\n",
+    "wind = tb.series(\"wind_power\")\n",
     "\n",
     "for site in wind.list_labels(\"site\"):\n",
     "    site_wind = wind.where(site=site)\n",
@@ -218,13 +214,13 @@
    ],
    "source": [
     "# Read a single series\n",
-    "df_t01 = td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
+    "df_t01 = tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
     "print(\"T01 at Gotland:\")\n",
     "print(df_t01.head())\n",
     "\n",
     "# To read multiple series, loop through them\n",
     "print(f\"\\nReading all Gotland wind turbines:\")\n",
-    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = tb.series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "dfs = {}\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
@@ -264,7 +260,7 @@
     }
    ],
    "source": [
-    "wind = td.series(\"wind_power\")\n",
+    "wind = tb.series(\"wind_power\")\n",
     "print(f\"All wind power: {wind.count()} series\")\n",
     "\n",
     "gotland = wind.where(site=\"Gotland\")\n",
@@ -295,6 +291,8 @@
      "text": [
       "No match: No series found matching filters: name=wind_power, unit=None, labels={'site': 'Mars'}\n",
       "\n",
+      "Wrong columns: For point-in-time data, DataFrame must have columns ['valid_time', 'value']. Found: ['valid_time', 'power']\n",
+      "\n",
       "Missing column: DataFrame must have 2 columns ['valid_time', 'value'] or 3 columns ['valid_time', 'valid_time_end', 'value']. Found 1 columns: ['value']\n"
      ]
     }
@@ -302,20 +300,20 @@
    "source": [
     "# 1. No series found\n",
     "try:\n",
-    "    td.series(\"wind_power\").where(site=\"Mars\").read()\n",
+    "    tb.series(\"wind_power\").where(site=\"Mars\").read()\n",
     "except ValueError as e:\n",
     "    print(f\"No match: {e}\")\n",
     "\n",
     "# 2. Wrong column names\n",
     "try:\n",
-    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'value': [1, 2, 3]})\n",
-    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
+    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'power': [1, 2, 3]})\n",
+    "    tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
     "except ValueError as e:\n",
     "    print(f\"\\nWrong columns: {e}\")\n",
     "\n",
     "# 3. Missing time column\n",
     "try:\n",
-    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
+    "    tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
     "except ValueError as e:\n",
     "    print(f\"\\nMissing column: {e}\")"
    ]
