--- a/examples/nb_03_forecast_revisions.ipynb
+++ b/examples/nb_03_forecast_revisions.ipynb
@@ -27,17 +27,14 @@
     }
    ],
    "source": [
-    "from timedb import TimeDataClient\n",
+    "import timedb as tb\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta, timezone\n",
     "import matplotlib.pyplot as plt\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
     "\n",
-    "td = TimeDataClient()\n",
-    "td.delete()\n",
-    "td.create()"
+    "tb.delete()\n",
+    "tb.create()"
    ]
   },
   {
@@ -55,7 +52,7 @@
     }
    ],
    "source": [
-    "forecast_series_id = td.create_series(\n",
+    "forecast_series_id = tb.create_series(\n",
     "    name='forecast',\n",
     "    unit='MW',\n",
     "    labels={'type': 'power_forecast', 'model': 'sinus_with_error'},\n",
@@ -63,14 +60,14 @@
     "    overlapping=True\n",
     ")\n",
     "\n",
-    "observation_series_id = td.create_series(\n",
+    "observation_series_id = tb.create_series(\n",
     "    name='flat',\n",
     "    unit='MW',\n",
     "    labels={'type': 'power_observation'},\n",
     "    description='Observation power values (ground truth)'\n",
     ")\n",
     "\n",
-    "for s in td.series().list_series():\n",
+    "for s in tb.series().list_series():\n",
     "    print(f\"  {s['name']}: unit={s['unit']}  overlapping={s['overlapping']}  labels={s['labels']}\")"
    ]
   },
@@ -92,43 +89,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted 4 forecast batches + observations (144 hours)\n"
+      "Inserted 4 forecast batches + 144 hours of observations\n"
      ]
     }
    ],
    "source": [
     "base_valid_time = datetime(2025, 1, 1, 0, 0, tzinfo=timezone.utc)\n",
-    "forecast_horizon_hours = 72\n",
-    "num_forecasts = 4\n",
-    "\n",
-    "# Generate \"observation\" power values over the full period (diurnal pattern + noise)\n",
     "np.random.seed(0)\n",
-    "total_hours = (num_forecasts - 1) * 24 + forecast_horizon_hours\n",
-    "all_hours = np.arange(total_hours)\n",
-    "observations = 80 + 40 * np.sin(2 * np.pi * all_hours / 24 - np.pi / 2) + np.random.normal(0, 3, total_hours)\n",
-    "observations = np.clip(observations, 0, None)  # power can't be negative\n",
+    "observations = np.clip(80 + 40 * np.sin(2 * np.pi * np.arange(144) / 24 - np.pi / 2) + np.random.normal(0, 3, 144), 0, None)\n",
     "\n",
-    "# Insert 4 forecasts — each starts at its known_time, error grows with lead time\n",
-    "for i in range(num_forecasts):\n",
+    "for i in range(4):\n",
     "    known_time = base_valid_time + timedelta(days=i)\n",
-    "    start_idx = i * 24  # offset into observations array\n",
-    "    valid_times = [known_time + timedelta(hours=j) for j in range(forecast_horizon_hours)]\n",
-    "    lead_hours = np.arange(forecast_horizon_hours)\n",
     "    np.random.seed(42 + i)\n",
-    "    forecast_error = np.random.normal(0, 1 + 0.3 * lead_hours)\n",
-    "    forecast_values = np.round(observations[start_idx:start_idx + forecast_horizon_hours] + forecast_error, 2)\n",
+    "    forecast = np.round(observations[i*24:i*24+72] + np.random.normal(0, 1 + 0.3 * np.arange(72)), 2)\n",
+    "    tb.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
+    "        df=pd.DataFrame({\"valid_time\": [known_time + timedelta(hours=j) for j in range(72)], \"value\": forecast}),\n",
+    "        known_time=known_time)\n",
     "\n",
-    "    df_forecast = pd.DataFrame({\"valid_time\": valid_times, \"value\": forecast_values})\n",
-    "    td.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
-    "        df=df_forecast, known_time=known_time\n",
-    "    )\n",
-    "\n",
-    "# Insert observation values\n",
-    "observation_valid_times = [base_valid_time + timedelta(hours=i) for i in range(total_hours)]\n",
-    "df_observation = pd.DataFrame({\"valid_time\": observation_valid_times, \"value\": np.round(observations, 2)})\n",
-    "td.series(\"flat\").where(type='power_observation').insert(df=df_observation)\n",
-    "\n",
-    "print(f\"Inserted {num_forecasts} forecast batches + observations ({total_hours} hours)\")"
+    "tb.series(\"flat\").where(type='power_observation').insert(\n",
+    "    df=pd.DataFrame({\"valid_time\": [base_valid_time + timedelta(hours=i) for i in range(144)], \"value\": np.round(observations, 2)}))\n",
+    "print(\"Inserted 4 forecast batches + 144 hours of observations\")"
    ]
   },
   {
@@ -254,14 +234,14 @@
    ],
    "source": [
     "start_valid = base_valid_time\n",
-    "end_valid = base_valid_time + timedelta(hours=total_hours)\n",
+    "end_valid = base_valid_time + timedelta(hours=144)\n",
     "\n",
     "# Read latest forecast and observations\n",
-    "df_forecast = td.series(\"forecast\").where(\n",
+    "df_forecast = tb.series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
-    "df_observation = td.series(\"flat\").where(\n",
+    "df_observation = tb.series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
@@ -408,12 +388,12 @@
    ],
    "source": [
     "# Read all forecast revisions with (known_time, valid_time) multi-index\n",
-    "df_forecast_overlapping = td.series(\"forecast\").where(\n",
+    "df_forecast_overlapping = tb.series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid, versions=True)\n",
     "\n",
     "# Read observations (flat)\n",
-    "df_observation_overlapping = td.series(\"flat\").where(\n",
+    "df_observation_overlapping = tb.series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
