--- a/examples/nb_05_api_usage.ipynb
+++ b/examples/nb_05_api_usage.ipynb
@@ -31,13 +31,12 @@
     }
    ],
    "source": [
-    "from timedb import TimeDataClient\n",
+    "import timedb as tb\n",
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
     "from datetime import datetime, timezone, timedelta\n",
     "\n",
-    "td = TimeDataClient()\n",
     "API_BASE_URL = \"http://127.0.0.1:8000\"\n",
     "headers = {\"Content-Type\": \"application/json\"}\n",
     "print(\"Ready\")"
@@ -71,10 +70,10 @@
    "source": [
     "# Delete existing schema (optional - only if you want to start fresh)\n",
     "# Uncomment the line below if you want to start with a clean database\n",
-    "td.delete()\n",
+    "tb.delete()\n",
     "\n",
     "# Create database schema\n",
-    "td.create()"
+    "tb.create()"
    ]
   },
   {
@@ -441,12 +440,12 @@
       "\n",
       "First few rows (showing forecast revisions):\n",
       "                        known_time                valid_time  value\n",
-      "0 2026-02-15 21:48:32.651934+00:00 2025-01-01 00:00:00+00:00   60.0\n",
-      "1 2026-02-15 21:48:32.651934+00:00 2025-01-01 01:00:00+00:00   59.5\n",
-      "2 2026-02-15 21:48:32.651934+00:00 2025-01-01 02:00:00+00:00   59.0\n",
-      "3 2026-02-15 21:48:32.651934+00:00 2025-01-01 03:00:00+00:00   58.5\n",
-      "4 2026-02-15 21:48:32.651934+00:00 2025-01-01 04:00:00+00:00   58.0\n",
-      "5 2026-02-15 21:48:32.651934+00:00 2025-01-01 05:00:00+00:00   57.5\n"
+      "0 2026-02-17 22:41:08.182341+00:00 2025-01-01 00:00:00+00:00   60.0\n",
+      "1 2026-02-17 22:41:08.182341+00:00 2025-01-01 01:00:00+00:00   59.5\n",
+      "2 2026-02-17 22:41:08.182341+00:00 2025-01-01 02:00:00+00:00   59.0\n",
+      "3 2026-02-17 22:41:08.182341+00:00 2025-01-01 03:00:00+00:00   58.5\n",
+      "4 2026-02-17 22:41:08.182341+00:00 2025-01-01 04:00:00+00:00   58.0\n",
+      "5 2026-02-17 22:41:08.182341+00:00 2025-01-01 05:00:00+00:00   57.5\n"
      ]
     }
    ],
@@ -501,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Known time from original insert: 2026-02-15T21:48:32.651934+00:00\n",
+      "Known time from original insert: 2026-02-17T22:41:08.182341+00:00\n",
       "\n",
       "\n",
       "Verified updated values:\n",
