update doc to use import timedb as td

--- a/examples/nb_03_forecast_revisions.ipynb
+++ b/examples/nb_03_forecast_revisions.ipynb
@@ -27,14 +27,14 @@
     }
    ],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta, timezone\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "tb.delete()\n",
-    "tb.create()"
+    "td.delete()\n",
+    "td.create()"
    ]
   },
   {
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "forecast_series_id = tb.create_series(\n",
+    "forecast_series_id = td.create_series(\n",
     "    name='forecast',\n",
     "    unit='MW',\n",
     "    labels={'type': 'power_forecast', 'model': 'sinus_with_error'},\n",
@@ -60,14 +60,14 @@
     "    overlapping=True\n",
     ")\n",
     "\n",
-    "observation_series_id = tb.create_series(\n",
+    "observation_series_id = td.create_series(\n",
     "    name='flat',\n",
     "    unit='MW',\n",
     "    labels={'type': 'power_observation'},\n",
     "    description='Observation power values (ground truth)'\n",
     ")\n",
     "\n",
-    "for s in tb.series().list_series():\n",
+    "for s in td.series().list_series():\n",
     "    print(f\"  {s['name']}: unit={s['unit']}  overlapping={s['overlapping']}  labels={s['labels']}\")"
    ]
   },
@@ -102,11 +102,11 @@
     "    known_time = base_valid_time + timedelta(days=i)\n",
     "    np.random.seed(42 + i)\n",
     "    forecast = np.round(observations[i*24:i*24+72] + np.random.normal(0, 1 + 0.3 * np.arange(72)), 2)\n",
-    "    tb.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
+    "    td.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
     "        df=pd.DataFrame({\"valid_time\": [known_time + timedelta(hours=j) for j in range(72)], \"value\": forecast}),\n",
     "        known_time=known_time)\n",
     "\n",
-    "tb.series(\"flat\").where(type='power_observation').insert(\n",
+    "td.series(\"flat\").where(type='power_observation').insert(\n",
     "    df=pd.DataFrame({\"valid_time\": [base_valid_time + timedelta(hours=i) for i in range(144)], \"value\": np.round(observations, 2)}))\n",
     "print(\"Inserted 4 forecast batches + 144 hours of observations\")"
    ]
@@ -237,11 +237,11 @@
     "end_valid = base_valid_time + timedelta(hours=144)\n",
     "\n",
     "# Read latest forecast and observations\n",
-    "df_forecast = tb.series(\"forecast\").where(\n",
+    "df_forecast = td.series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
-    "df_observation = tb.series(\"flat\").where(\n",
+    "df_observation = td.series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
@@ -388,12 +388,12 @@
    ],
    "source": [
     "# Read all forecast revisions with (known_time, valid_time) multi-index\n",
-    "df_forecast_overlapping = tb.series(\"forecast\").where(\n",
+    "df_forecast_overlapping = td.series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid, versions=True)\n",
     "\n",
     "# Read observations (flat)\n",
-    "df_observation_overlapping = tb.series(\"flat\").where(\n",
+    "df_observation_overlapping = td.series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
