--- a/examples/nb_04_timeseries_changes.ipynb
+++ b/examples/nb_04_timeseries_changes.ipynb
@@ -28,14 +28,14 @@
     }
    ],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timezone, timedelta\n",
     "import numpy as np\n",
     "\n",
-    "tb.delete()\n",
-    "tb.create()"
+    "td.delete()\n",
+    "td.create()"
    ]
   },
   {
@@ -74,17 +74,17 @@
     "times = [base_time + timedelta(hours=i) for i in range(24)]\n",
     "np.random.seed(42)\n",
     "\n",
-    "tb.create_series(name=\"meter_reading\", unit=\"dimensionless\")\n",
-    "tb.create_series(name=\"temperature\", unit=\"dimensionless\", overlapping=True)\n",
+    "td.create_series(name=\"meter_reading\", unit=\"dimensionless\")\n",
+    "td.create_series(name=\"temperature\", unit=\"dimensionless\", overlapping=True)\n",
     "\n",
-    "result_flat = tb.series(\"meter_reading\").insert(\n",
+    "result_flat = td.series(\"meter_reading\").insert(\n",
     "    df=pd.DataFrame({'valid_time': times, 'value': [round(100 + i*5 + np.random.normal(0, 0.2), 2) for i in range(24)]}))\n",
     "\n",
-    "result_batch_1 = tb.series(\"temperature\").insert(\n",
+    "result_batch_1 = td.series(\"temperature\").insert(\n",
     "    df=pd.DataFrame({'valid_time': times, 'value': [round(20 + 5*np.sin(2*np.pi*i/24) + np.random.normal(0, 0.5), 2) for i in range(24)]}),\n",
     "    known_time=base_time)\n",
     "\n",
-    "result_batch_2 = tb.series(\"temperature\").insert(\n",
+    "result_batch_2 = td.series(\"temperature\").insert(\n",
     "    df=pd.DataFrame({'valid_time': times, 'value': [round(20 + 5*np.sin(2*np.pi*i/24) + np.random.normal(0, 1), 2) for i in range(24)]}),\n",
     "    known_time=base_time + timedelta(hours=2))\n",
     "\n",
@@ -206,12 +206,12 @@
    "source": [
     "# Read both time series\n",
     "# For overlapping, read() returns the LATEST version (highest known_time)\n",
-    "df_temp_read = tb.series(\"temperature\").read(\n",
+    "df_temp_read = td.series(\"temperature\").read(\n",
     "    start_valid=base_time,\n",
     "    end_valid=base_time + timedelta(hours=24),\n",
     ")\n",
     "\n",
-    "df_meter_read = tb.series(\"meter_reading\").read(\n",
+    "df_meter_read = td.series(\"meter_reading\").read(\n",
     "    start_valid=base_time,\n",
     "    end_valid=base_time + timedelta(hours=24),\n",
     ")\n",
@@ -220,7 +220,7 @@
     "print(f\"Meter reading (flat): {len(df_meter_read)} data points\")\n",
     "\n",
     "# Also read ALL versions to see both batches\n",
-    "df_temp_all_versions = tb.series(\"temperature\").read(\n",
+    "df_temp_all_versions = td.series(\"temperature\").read(\n",
     "    start_valid=base_time,\n",
     "    end_valid=base_time + timedelta(hours=24),\n",
     "    versions=True,  # Get ALL versions\n",
@@ -336,7 +336,7 @@
     "# Update the flat series - just need series_id and valid_time!\n",
     "corrected_meter_value = 130.0\n",
     "\n",
-    "result = tb.series(\"meter_reading\").update_records(updates=[{\n",
+    "result = td.series(\"meter_reading\").update_records(updates=[{\n",
     "    \"valid_time\": update_time_flat,\n",
     "    \"value\": corrected_meter_value,\n",
     "    \"annotation\": \"Corrected: faulty meter reading\",\n",
@@ -348,7 +348,7 @@
     "print(f\"  Updated records: {len(result)}\")\n",
     "\n",
     "# Verify the update - read it back\n",
-    "df_meter_after = tb.series(\"meter_reading\").read(\n",
+    "df_meter_after = td.series(\"meter_reading\").read(\n",
     "    start_valid=update_time_flat,\n",
     "    end_valid=update_time_flat + timedelta(hours=1),\n",
     ")\n",
@@ -419,7 +419,7 @@
     "\n",
     "# METHOD 1: Update using batch_id (targeting Batch 1)\n",
     "print(f\"\\nMETHOD 1: batch_id — update {update_time_1} in Batch 1\")\n",
-    "result_1 = tb.series(\"temperature\").update_records(updates=[{\n",
+    "result_1 = td.series(\"temperature\").update_records(updates=[{\n",
     "    \"batch_id\": batch_id_1,\n",
     "    \"valid_time\": update_time_1,\n",
     "    \"value\": 29.0,\n",
@@ -431,7 +431,7 @@
     "\n",
     "# METHOD 2: Update using known_time (exact version lookup)\n",
     "print(f\"\\nMETHOD 2: known_time — update {update_time_2} from Batch 1 (known_time={known_time_1})\")\n",
-    "result_2 = tb.series(\"temperature\").update_records(updates=[{\n",
+    "result_2 = td.series(\"temperature\").update_records(updates=[{\n",
     "    \"known_time\": known_time_1,\n",
     "    \"valid_time\": update_time_2,\n",
     "    \"value\": 27.0,\n",
@@ -443,7 +443,7 @@
     "\n",
     "# METHOD 3: Update using just valid_time (latest version)\n",
     "print(f\"\\nMETHOD 3: valid_time only — update latest version at {update_time_3}\")\n",
-    "result_3 = tb.series(\"temperature\").update_records(updates=[{\n",
+    "result_3 = td.series(\"temperature\").update_records(updates=[{\n",
     "    \"valid_time\": update_time_3,\n",
     "    \"value\": 25.0,\n",
     "    \"annotation\": \"Updated via latest lookup (most convenient!)\",\n",
@@ -498,7 +498,7 @@
    ],
    "source": [
     "# Read all versions for the time points we updated\n",
-    "df_versions = tb.series(\"temperature\").read(\n",
+    "df_versions = td.series(\"temperature\").read(\n",
     "    start_valid=base_time + timedelta(hours=5),\n",
     "    end_valid=base_time + timedelta(hours=20),\n",
     "    versions=True,\n",
@@ -561,14 +561,14 @@
    ],
    "source": [
     "# Read current (latest) version after all updates\n",
-    "df_current = tb.series(\"temperature\").read(\n",
+    "df_current = td.series(\"temperature\").read(\n",
     "    start_valid=base_time,\n",
     "    end_valid=base_time + timedelta(hours=24),\n",
     ")\n",
     "\n",
     "# Also read Batch 1 and Batch 2 values for comparison\n",
     "# We can get them by reading all versions and filtering\n",
-    "df_all = tb.series(\"temperature\").read(\n",
+    "df_all = td.series(\"temperature\").read(\n",
     "    start_valid=base_time,\n",
     "    end_valid=base_time + timedelta(hours=24),\n",
     "    versions=True,\n",
@@ -639,7 +639,7 @@
    "source": [
     "### Summary\n",
     "\n",
-    "- **Flat series**: in-place updates via `tb.series(\"name\").update_records(updates=[{\"valid_time\": dt, \"value\": ...}])`\n",
+    "- **Flat series**: in-place updates via `td.series(\"name\").update_records(updates=[{\"valid_time\": dt, \"value\": ...}])`\n",
     "- **Overlapping series**: versioned updates — creates new row with `known_time=now()`, preserving originals\n",
     "- **Three lookup methods** for overlapping: `batch_id`, `known_time`, or just `valid_time` (targets latest)\n",
     "- **Read versions**: `read(versions=True)` returns full audit trail with `(known_time, valid_time)` index\n",
