--- a/examples/nb_05_api_usage.ipynb
+++ b/examples/nb_05_api_usage.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
@@ -70,10 +70,10 @@
    "source": [
     "# Delete existing schema (optional - only if you want to start fresh)\n",
     "# Uncomment the line below if you want to start with a clean database\n",
-    "tb.delete()\n",
+    "td.delete()\n",
     "\n",
     "# Create database schema\n",
-    "tb.create()"
+    "td.create()"
    ]
   },
   {
