--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -36,14 +36,14 @@
     }
    ],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "import random\n",
     "from datetime import datetime, timedelta, timezone\n",
     "import math\n",
     "\n",
-    "tb.delete()\n",
-    "tb.create()"
+    "td.delete()\n",
+    "td.create()"
    ]
   },
   {
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "series_id = tb.create_series(\n",
+    "series_id = td.create_series(\n",
     "    name='wind_power',\n",
     "    unit='MW',\n",
     "    labels={'site': 'offshore_1', 'type': 'forecast'},\n",
@@ -79,7 +79,7 @@
     ")\n",
     "\n",
     "# See what was created\n",
-    "for s in tb.series('wind_power').list_series():\n",
+    "for s in td.series('wind_power').list_series():\n",
     "    print(f\"  id={s['series_id']}  name={s['name']}  unit={s['unit']}  labels={s['labels']}  overlapping={s['overlapping']}\")"
    ]
   },
@@ -122,7 +122,7 @@
     "})\n",
     "\n",
     "# Insert with known_time (when forecast was made)\n",
-    "tb.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
+    "td.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
     "    df=df,\n",
     "    known_time=known_time\n",
     ")"
@@ -166,7 +166,7 @@
     "    'value': revised_values\n",
     "})\n",
     "\n",
-    "tb.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
+    "td.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
     "    df=df_revised,\n",
     "    known_time=revised_known\n",
     ")"
@@ -283,7 +283,7 @@
    ],
    "source": [
     "# Read latest forecast values\n",
-    "df_latest = tb.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
+    "df_latest = td.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
     "    start_valid=known_time,\n",
     "    end_valid=revised_known + timedelta(hours=24)\n",
     ")\n",
@@ -411,7 +411,7 @@
    ],
    "source": [
     "# Read all forecast revisions\n",
-    "df_all = tb.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
+    "df_all = td.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
     "    start_valid=known_time,\n",
     "    end_valid=revised_known + timedelta(hours=24),\n",
     "    versions=True\n",
