--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "from datetime import datetime, timezone, timedelta"
    ]
@@ -50,8 +50,8 @@
     }
    ],
    "source": [
-    "tb.delete()\n",
-    "tb.create()\n",
+    "td.delete()\n",
+    "td.create()\n",
     "\n",
     "series_configs = [\n",
     "    {'name': 'wind_power', 'unit': 'MW', 'labels': {'turbine': 'T01', 'site': 'Gotland', 'type': 'onshore'}},\n",
@@ -63,7 +63,7 @@
     "]\n",
     "\n",
     "for config in series_configs:\n",
-    "    tb.create_series(**config)\n",
+    "    td.create_series(**config)\n",
     "\n",
     "print(f\"Created {len(series_configs)} series\")"
    ]
@@ -97,7 +97,7 @@
     "dates = [base_time + timedelta(hours=i) for i in range(24)]\n",
     "\n",
     "# Insert data for each Gotland turbine\n",
-    "gotland_wind = tb.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
     "    df = pd.DataFrame({\n",
@@ -137,7 +137,7 @@
    ],
    "source": [
     "# list_series() returns full metadata for each matching series\n",
-    "all_wind = tb.series(\"wind_power\")\n",
+    "all_wind = td.series(\"wind_power\")\n",
     "print(f\"All wind power series ({all_wind.count()}):\\n\")\n",
     "\n",
     "for s in all_wind.list_series():\n",
@@ -160,7 +160,7 @@
    ],
    "source": [
     "# list_labels() returns unique values for a single label dimension\n",
-    "wind = tb.series(\"wind_power\")\n",
+    "wind = td.series(\"wind_power\")\n",
     "\n",
     "for site in wind.list_labels(\"site\"):\n",
     "    site_wind = wind.where(site=site)\n",
@@ -214,13 +214,13 @@
    ],
    "source": [
     "# Read a single series\n",
-    "df_t01 = tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
+    "df_t01 = td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
     "print(\"T01 at Gotland:\")\n",
     "print(df_t01.head())\n",
     "\n",
     "# To read multiple series, loop through them\n",
     "print(f\"\\nReading all Gotland wind turbines:\")\n",
-    "gotland_wind = tb.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "dfs = {}\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "wind = tb.series(\"wind_power\")\n",
+    "wind = td.series(\"wind_power\")\n",
     "print(f\"All wind power: {wind.count()} series\")\n",
     "\n",
     "gotland = wind.where(site=\"Gotland\")\n",
@@ -300,20 +300,20 @@
    "source": [
     "# 1. No series found\n",
     "try:\n",
-    "    tb.series(\"wind_power\").where(site=\"Mars\").read()\n",
+    "    td.series(\"wind_power\").where(site=\"Mars\").read()\n",
     "except ValueError as e:\n",
     "    print(f\"No match: {e}\")\n",
     "\n",
     "# 2. Wrong column names\n",
     "try:\n",
     "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'power': [1, 2, 3]})\n",
-    "    tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
+    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
     "except ValueError as e:\n",
     "    print(f\"\\nWrong columns: {e}\")\n",
     "\n",
     "# 3. Missing time column\n",
     "try:\n",
-    "    tb.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
+    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
     "except ValueError as e:\n",
     "    print(f\"\\nMissing column: {e}\")"
    ]
