--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -30,13 +30,13 @@
     }
    ],
    "source": [
-    "import timedb as tb\n",
+    "import timedb as td\n",
     "import pandas as pd\n",
     "import pint_pandas\n",
     "from datetime import datetime, timezone, timedelta\n",
     "\n",
-    "tb.delete()\n",
-    "tb.create()"
+    "td.delete()\n",
+    "td.create()"
    ]
   },
   {
@@ -66,9 +66,9 @@
     "times = [base_time + timedelta(hours=i) for i in range(24)]\n",
     "\n",
     "# Create series with specific units\n",
-    "tb.create_series(name=\"power\", unit=\"MW\")\n",
-    "tb.create_series(name=\"wind_speed\", unit=\"m/s\")\n",
-    "tb.create_series(name=\"temperature\", unit=\"degree_Celsius\")\n",
+    "td.create_series(name=\"power\", unit=\"MW\")\n",
+    "td.create_series(name=\"wind_speed\", unit=\"m/s\")\n",
+    "td.create_series(name=\"temperature\", unit=\"degree_Celsius\")\n",
     "\n",
     "# Insert with matching pint units — stripped to plain floats internally\n",
     "for name, unit, values in [\n",
@@ -80,7 +80,7 @@
     "        \"valid_time\": times,\n",
     "        \"value\": pd.array(values, dtype=f\"pint[{unit}]\"),\n",
     "    })\n",
-    "    tb.series(name).insert(df)\n",
+    "    td.series(name).insert(df)\n",
     "\n",
     "print(\"Inserted 3 series with pint units\")"
    ]
@@ -106,14 +106,14 @@
    ],
    "source": [
     "# Read back without pint (default) — plain float64\n",
-    "df_plain = tb.series(\"power\").read()\n",
+    "df_plain = td.series(\"power\").read()\n",
     "print(\"Default read (plain float64):\")\n",
     "print(f\"  dtype: {df_plain['value'].dtype}\")\n",
     "print(f\"  head: {df_plain['value'].head(3).tolist()}\")\n",
     "print()\n",
     "\n",
     "# Read back with as_pint=True — pint dtype\n",
-    "df_pint = tb.series(\"power\").read(as_pint=True)\n",
+    "df_pint = td.series(\"power\").read(as_pint=True)\n",
     "print(\"Read with as_pint=True:\")\n",
     "print(f\"  dtype: {df_pint['value'].dtype}\")\n",
     "print(f\"  head: {df_pint['value'].head(3).tolist()}\")"
@@ -150,10 +150,10 @@
     "    \"value\": pd.array([500.0] * 24, dtype=\"pint[kW]\"),\n",
     "})\n",
     "\n",
-    "tb.series(\"power\").insert(df_kw)\n",
+    "td.series(\"power\").insert(df_kw)\n",
     "\n",
     "# Read back — should show 0.5 MW (500 kW converted)\n",
-    "df_check = tb.series(\"power\").read(\n",
+    "df_check = td.series(\"power\").read(\n",
     "    start_valid=new_times[0],\n",
     "    end_valid=new_times[0] + timedelta(hours=1)\n",
     ")\n",
@@ -190,7 +190,7 @@
     "    \"valid_time\": [base_time + timedelta(hours=48)],\n",
     "    \"value\": [999.0],  # plain float, no pint\n",
     "})\n",
-    "tb.series(\"power\").insert(df_plain)\n",
+    "td.series(\"power\").insert(df_plain)\n",
     "print(\"Plain float64 insert: OK (no unit check)\")\n",
     "\n",
     "# Dimensionless pint — treated as series unit\n",
@@ -198,7 +198,7 @@
     "    \"valid_time\": [base_time + timedelta(hours=49)],\n",
     "    \"value\": pd.array([42.0], dtype=\"pint[dimensionless]\"),\n",
     "})\n",
-    "tb.series(\"power\").insert(df_dimless)\n",
+    "td.series(\"power\").insert(df_dimless)\n",
     "print(\"Pint dimensionless insert: OK (treated as MW)\")"
    ]
   },
@@ -235,7 +235,7 @@
     "})\n",
     "\n",
     "try:\n",
-    "    tb.series(\"power\").insert(df_mwh)\n",
+    "    td.series(\"power\").insert(df_mwh)\n",
     "    print(\"Unexpected: should have failed\")\n",
     "except IncompatibleUnitError as e:\n",
     "    print(f\"Rejected: {type(e).__name__}\")\n",
